[project]
name = "lukscrypt"
version = "0.1.0"
description = "User-friendly encryption of disk drives on Debian Linux distros using LUKS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.3.2",
    "typer>=0.21.1",
    "xkcdpass>=1.30.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.3",
    "nuitka>=4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
console_output_style = "count"
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = [".", "./src"]
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--no-cov-on-fail",
    "--import-mode=append",
]

[project.scripts]
lukscrypt = "src.main:app"

[build-system]
requires = ["hatchling", "packaging"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
